RESOLVED FIXED80463
RenderImage is using the wrong origin when calling addRelevantRepaintedObject
https://bugs.webkit.org/show_bug.cgi?id=80463
Summary RenderImage is using the wrong origin when calling addRelevantRepaintedObject
Beth Dakin
Reported 2012-03-06 17:38:10 PST
Similar to https://bugs.webkit.org/show_bug.cgi?id=80351, RenderImage is also using the wrong offset. Patch forthcoming.
Attachments
Patch (17.64 KB, patch)
2012-03-06 17:56 PST, Beth Dakin
mitz: review+
Beth Dakin
Comment 1 2012-03-06 17:56:47 PST
Beth Dakin
Comment 2 2012-03-08 15:24:46 PST
Note You need to log in before you can comment on or make changes to this bug.