https://bugs.webkit.org/show_bug.cgi?id=80463 RenderImage is using the wrong origin when calling addRelevantRepaintedObject -and corresponding- <rdar://problem/10970221>

Reviewed by Dan Bernstein.

Source/WebCore:

Use the exact same rect that we paint with instead of the
visualOverflowRect() which does not always have a correct x and y.
* rendering/RenderImage.cpp:
(WebCore::RenderImage::paintReplaced):
* rendering/RenderVideo.cpp:
(WebCore::RenderVideo::paintReplaced):

Tools:

New test!
* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKit2/NewFirstVisuallyNonEmptyLayoutForImages.cpp: Added.
(TestWebKitAPI):
(TestWebKitAPI::didNewFirstVisuallyNonEmptyLayout):
(TestWebKitAPI::setPageLoaderClient):
(TestWebKitAPI::TEST):
* TestWebKitAPI/Tests/WebKit2/NewFirstVisuallyNonEmptyLayoutForImages_Bundle.cpp: Added.
(TestWebKitAPI):
(NewFirstVisuallyNonEmptyLayoutForImagesTest):
(TestWebKitAPI::NewFirstVisuallyNonEmptyLayoutForImagesTest::NewFirstVisuallyNonEmptyLayoutForImagesTest):
(TestWebKitAPI::NewFirstVisuallyNonEmptyLayoutForImagesTest::didCreatePage):
* TestWebKitAPI/Tests/WebKit2/lots-of-images.html: Added.



Canonical link: https://commits.webkit.org/97817@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110218 268f45cc-cd09-0410-ab3c-d52691b4dbfc